_scss/font.scss
@charset 'utf-8';

html { 
    font-family: 'Inter', sans-serif;
    color: #000;
}

.disabled {
    opacity: 0.5;
}

h1, h2, p, a {
    margin: 0.25em 0;
}

h3, h4, h5, h6 {
    margin: 0.5em 0;
}

h1, h2, h3 {
    font-weight: 600;
    line-height: 1.25em;
    letter-spacing: -0.02em;
}

p, a, li {
    font-weight: 500;
    line-height: 1.5em;
}

h1 { font-size: 5em;}
h2 { font-size: 4em;}
h3 { font-size: 1.6em; }

@media only screen and (max-width: 700px) {
    h1 { font-size: 3em; line-height: 1.5em;}
    h2 { font-size: 2em; line-height: 1.5em;}
    h3 { font-size: 1.2em; }
}

